added search form

--- a/Resources/frontend/less/_modules/ost-article-search.less
+++ b/Resources/frontend/less/_modules/ost-article-search.less
@@ -1,6 +1,5 @@
 
-
-
+// remove sidebar
 @media screen and (min-width: @tabletViewportWidth)
 {
     .is--ctl-ostarticlesearch {
@@ -8,9 +7,13 @@
             display: none;
         }
     }
-
-
-
 }
 
 
+
+// more width for inputs
+.content--ost-article-search input {
+    display: block;
+    width: 95%;
+    margin-bottom: 8px;
+}
